# glow

./: .env  .gitignore  CONTRIBUTIONS.rst  LICENSE  README.rst  pyproject.toml
.github/workflows/: pages.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/_templates/: latex.tex.jinja  latex.tex_t
docs/source/: acknowledgments.rst  api_guide.rst  application_configuration.rst  bibliography.rst  contacts.rst  dependencies.rst  getting_started.rst  glow.bib  introduction.rst  project_structure.rst  release_notes.rst  tests.rst  tutorials.rst
glow/: __init__.py  main.py
glow/generator/: generator.py  geom_extractor.py  support.py
glow/geometry_layouts/: cells.py  fillable_layouts.py  geometries.py  lattices.py  layouts.py  utility.py
glow/interface/: __init__.py  geom_entities.py  geom_interface.py
glow/support/: types.py  utility.py
tests/examples/: alfred_assembly_test.py  alfred_stress_test.py  cartesian_cell_demo.py  cartesian_lattice_test.py  demo.py  hexagonal_cell_demo.py  lattice_cells_properties_test.py  lattice_symmetry_test.py  overlapping_cells.py
tests/functional/: run_test.py  run_tests.py  test_cartesian_assembly.py  test_cartesian_assembly_eighth.py  test_cartesian_cell.py  test_hex_assembly.py  test_hex_assembly_sixth.py  test_hex_assembly_twelfth.py  test_hex_cell.py
tests/unittest/: run_tests.py  support_funcs.py  test_cells.py  test_generator.py  test_geom_extractor.py  test_geom_extractor2.py  test_geometries.py  (+3 more)
tutorials/: cartesian_assembly.py  cartesian_cell.py  colorset.py  hexagonal_assembly.py  hexagonal_cell.py
(+5 files in other folders)
